some tweaks and fixes

--- a/localisation/english/PB_Alerts.yml
+++ b/localisation/english/PB_Alerts.yml
@@ -7,5 +7,9 @@
   debug_mode_enabled_delayed: "You are currently in §Ydebug§! mode!\nHave fun developing and testing your favorite mod, Pax Britannica: An Imperial Timeline!"
   pax_tension_test_enabled: "§RImperial Tension Breaking Point!§!"
   pax_tension_test_enabled_delayed: "§YThe End of the Confederation is almost at hand...§!"
+  pax_tension_better_enabled: "§GImperial Tension has Lowered!§!"
+  pax_tension_better_enabled_delayed: "Lowering Imperial Tension is the best way to avoid full scale war..."
+  pax_tension_worse_enabled: "§RImperial Tension has Increased!§!"
+  pax_tension_worse_enabled_delayed: "The relations are strained, will Imperial Divorce happen?"
   pax_second_national_awakening_enabled: "§RThe Second National Awakening§!"
   pax_second_national_awakening_enabled_delayed: "§YSomething is brewing in the deep...§!"
