--- a/localisation/english/PB_country_specific/PB_Britain_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Britain_l_english.yml
@@ -1004,7 +1004,7 @@
   PB_Iceland_Occupation:0 "[ICE.GetFlag] §YOperation Hardrada§!"
 
   PB_Support_Ottomans:0 "[TUR.GetFlag] §OSupport the Ottoman Loyalists§!"
-  PB_Support_Qing:0 "[CHI.GetFlag] §OSupport the Qing Empire§!"
+  PB_Support_Taiping:0 "[CHI.GetFlag] §OSupport the Taiping Kingdom§!"
   PB_Support_Rashidis:0 "[JBS.GetFlag] §OSupport the Rashidis§!"
   
   PB_Invoke_Portugal_Alliance:0 "[POR.GetFlag] §CInvoke the Anglo-Portuguese Alliance§!"
