--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
  MINIMIZE_EVENT:0 "§GClick§! to Minimize. Event will be placed in the Event Queue under §HEvents and Decisions§!."
+ THREAT_FROM_EFFECT:0 "Threat from actions"
 
 ##please keep this file
