--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -520,7 +520,7 @@
  VICTORY_POINTS_10004:0 "Fangchenggang"
  VICTORY_POINTS_7039:0 "Gaozhou"
  VICTORY_POINTS_4152:0 "Wuzhou"
- VICTORY_POINTS_7108:0 "Shenzen"
+ VICTORY_POINTS_7108:0 "Shenzhen"
  VICTORY_POINTS_7152:0 "Zhaoqing"
  VICTORY_POINTS_12095:0 "Qingyuan"
  VICTORY_POINTS_1162:0 "Heyuan"
