fixed albrecht losing his traits

--- a/localisation/english/PB_country_specific/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Mexico_l_english.yml
@@ -92,7 +92,7 @@
   PB_MEX_Our_Finest_Hour_tt:0 "\nThe above countries will be aware of our aggressive military posturing and will form defensive alliances against us."
   PB_MEX_Operation_Screeming_South_tt:0 "\nPicking this focus will autocomplete the focus §HOperation: Dead North§!. This will mean you will be at war with the north but will only receive buffs against your southern enemies. You can only pick one of each so choose wisely.\n\n"
   PB_MEX_Operation_Dead_North_tt:0 "\nPicking this focus will autocomplete the focus §HOperation: Screeming South§!. This will mean you will be at war with the south but will only receive buffs against your northern enemies. You can only pick one of each so choose wisely.\n\n"
-  PB_MEX_Mobolize_The_Reserves_tt:0 "\n4 £GFX_nato_unit_infantry_icon_small  Reserve Infantry units will be mobolized"
+  PB_MEX_Mobolize_The_Reserves_tt:0 "\n4 £GFX_nato_unit_infantry_icon_small  Reserve Infantry units will be mobilized"
 
   MEX_Road_To_Revolution_activate:0 "Mexico is in a crisis"
   MEX_Road_To_Revolution_disable: "Complete §YOur Finest Hour§! national focus"
@@ -417,7 +417,7 @@
   PB_MEX_Our_Finest_Hour:0 "Our Finest Hour"
   PB_MEX_Our_Finest_Hour_desc:0 "Mexico now stands at a crossroad, does it reclaim its former glory as the major power on the North American continent, or does it bend to the might of others? Many believe that now is the time that we retake what is rightfully ours, no more compromises, no more treaties, Mexico shall be whole."
 
-  PB_MEX_Mobolize_The_Reserves:0 "Mobolize The Reserves"
+  PB_MEX_Mobolize_The_Reserves:0 "Mobilize The Reserves"
   PB_MEX_Mobolize_The_Reserves_desc:0 "There are still some men who have not been mobilized for the upcoming war effort. It would serve the state greatly if these remaining souls were armed and ready for the greatest war Mexico shall ever partake in. Afterall we are going to need as many soldiers we can get our hands on if we are to break the tide of democratic-Jacobinism. "
 
   PB_MEX_Operation_Screeming_South:0 "Operation: Screaming South"
