--- a/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
@@ -682,7 +682,7 @@
   PB_PRS_Continue_The_Aristroctatic_Legacy_desc:0 "ur legacy is a long one. We have led Prussia through the years through many trials and tribulations.  We will adjust some aspects of Prussian life to ensure that our legacy remains as is, no matter the grumbling of the lesser man who does not have the same power as we hold. It is only right that we keep it that way."
   PB_PRS_The_Nobles_Due:0 "The Nobles Due"
   PB_PRS_The_Nobles_Due_desc:0 "Everyone has their parts to play and dues to pay in life. We Junkers are no exception to that rule. For the safety and security of our homeland, each Junker shall give a small portion of their wealth to Prussia for use in its development. It is our due to the nation and to the people we protect."
-  PB_PRS_Mobilize_The_New_Blood:0 "Mobolize The New Blood"
+  PB_PRS_Mobilize_The_New_Blood:0 "Mobilize The New Blood"
   PB_PRS_Mobilize_The_New_Blood_desc:0 "We will not be around forever, that is a fact. As the Old Guard die off, more and more of the younger Junkers will take their place, and with them come their ideas of liberty. We should lean more on them as they come to prominence and enshrine their ideas into Prussia itself."
   PB_PRS_A_New_Path:0 "A New Path"
   PB_PRS_A_New_Path_desc:0 "With the ideas of the younger Junkers firmly embedded in our cause, it's time we follow up and finish what we set out to do when we gained independence from Russia before Bouhler pulled his stunt, and that is to make Prussia a constitutional monarchy along the lines of those of Britain and Germany."
