--- a/localisation/english/PB_country_specific/PB_SCA_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_SCA_l_english.yml
@@ -87,9 +87,9 @@
   PB_SCA_Wild_West_No_Longer_3:0 "The Tamed West"
   PB_SCA_Wild_West_No_Longer_3_desc:0 "The days of cowboys and lawlessness is coming to an end, bureaucracy and the authority of nations has brought the demise of this once rugged way of life. Today a horse is as about as useful as a rock when it comes to traversing the great lengths of the American west; instead, trains and motorized technologies have taken the place of flesh and muscle. To ignore these changes is to be ignorant, and to fight against them is simply suicidal."
 
-  PB_SCA_Mobolize_The_Workers:0 "Mobolise The Workers"
-  PB_SCA_Mobolize_The_Workers_2:0 "Mobolise The Workers"
-  PB_SCA_Mobolize_The_Workers_3:0 "Mobolise The Workers"
+  PB_SCA_Mobolize_The_Workers:0 "Mobilize The Workers"
+  PB_SCA_Mobolize_The_Workers_2:0 "Mobilize The Workers"
+  PB_SCA_Mobolize_The_Workers_3:0 "Mobilize The Workers"
 
   PB_SCA_Sic_Semper_Tyrannis:0 "Sic Semper Tyrannis"
   PB_SCA_Sic_Semper_Tyrannis_desc:0 "It is not death that a man should fear, but he should fear never beginning to live. - Marcus Aurelius"
@@ -194,7 +194,7 @@
   SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
   
   PB_SCA_The_Sleeping_Giant:0 "The Sleeping Giant"
-  PB_SCA_The_Sleeping_Giant_desc:0 "\n\n\n\n\n\nThough we have exiled ourselves to the middle of buttfuck nowhere the §YUnited Commonwealth§! casts a poisoned shadow over our people, and our states very existence. They know we left, and we settled ourselves for a new life, but if they find even our general whereabouts then our very survival is at stake. It is therefore necessary that we keep our presence unknown until we are ready to strike first or until we at the very least reach an acceptable level of readiness.\n\nThe cost of the '§YHide From The Giant§!' decision equates to how many battalions you have mobolized, i.e. nine battalions = nine political power, this is related to battalions, §RNOT DIVISIONS§!. If The UC discovers us then we will suffer from a §RSEVERE§! national spirit debuff that can only be removed after the UC is defeated. This basically means death. It is §RHIGHLY§! reccommended that you do not spam out divisions willy-nilly. Once you have conquered most of the Mid-West this mechanic will come to an end since your existence and whereabouts will be made very clear to the UC at that point.\n\n§RGod help us all if they discover our sanctuary, our home.§!"
+  PB_SCA_The_Sleeping_Giant_desc:0 "\n\n\n\n\n\nThough we have exiled ourselves to the middle of buttfuck nowhere the §YUnited Commonwealth§! casts a poisoned shadow over our people, and our states very existence. They know we left, and we settled ourselves for a new life, but if they find even our general whereabouts then our very survival is at stake. It is therefore necessary that we keep our presence unknown until we are ready to strike first or until we at the very least reach an acceptable level of readiness.\n\nThe cost of the '§YHide From The Giant§!' decision equates to how many battalions you have mobilized, i.e. nine battalions = nine political power, this is related to battalions, §RNOT DIVISIONS§!. If The UC discovers us then we will suffer from a §RSEVERE§! national spirit debuff that can only be removed after the UC is defeated. This basically means death. It is §RHIGHLY§! reccommended that you do not spam out divisions willy-nilly. Once you have conquered most of the Mid-West this mechanic will come to an end since your existence and whereabouts will be made very clear to the UC at that point.\n\n§RGod help us all if they discover our sanctuary, our home.§!"
   SCA_With_Open_Eyes:0 "With Open Eyes"
   SCA_With_Open_Eyes_desc:0 "Like prey hiding from an Eagle on the hunt any sudden movement could give our vulnerable position away. We must take great precautions in the way we conduct our struggling nation else we meet the mouth of the predator."
   SCA_With_Open_Eyes_2:0 "With Open Eyes"
@@ -947,7 +947,7 @@
   SCA_The_Tamed_Frontier:0 "The Tamed Frontier"
   SCA_The_Tamed_Frontier_desc:0 "The days of the Last Frontier will soon be over, technological progress has brought mother nature onto her knees and to the negotiating table. In due time the last saloons of old will close, the last bandits crushed, and the last faces of the old west will wither away. Times are rapidly changing and this untamed frontier will be anything but untamed."
 
-  SCA_Mobolize_The_Workers:0 "Mobolise The Workers"
+  SCA_Mobolize_The_Workers:0 "Mobilize The Workers"
   SCA_Mobolize_The_Workers_desc:0 "War with Philadelphia is on the horizon and if we aren’t prepared then this whole damn revolution will quickly fall apart. Everyone will be expected to give their all to the state in preparation for the war and during it if we plan on accomplishing our great dream."
 
   SCA_The_Red_Shield:0 "The Red Shield"
