--- a/localisation/english/PB_SouthAfricanWar_Events_l_english.yml
+++ b/localisation/english/PB_SouthAfricanWar_Events_l_english.yml
@@ -103,9 +103,9 @@
 
   PB_SA_War:0 "The South Africian Bush War"
   PB_SA_War_desc:0 "\n\n\n\n\n\nWith the Dutch government now in exile the South-Africian dominions find themselves in a power struggle for the surrounding lands. Unfortunately the pen of diplomacy seems to have run out of ink and the only answer to such stuggles is through conquest. Brother will fight brother as mother watches on with disgust.\n\n§RDeutsch-Südwestafrika will likely intervene if war breaks out!§!"
-  SA_Mobolize_Native_Afrikaners:0 "Mobolize Native Afrikaners"
+  SA_Mobolize_Native_Afrikaners:0 "Mobilize Native Afrikaners"
   SA_Mobolize_Native_Afrikaners_desc:0 "The native population is large in number and is proving to be a vital asset for the eventual Bush War. They may hate fighting for a foreign banner but what choice do they truely have?"
-  SA_Mobolize_Dutch_Afrikaners:0 "Mobolize Dutch Afrikaners"
+  SA_Mobolize_Dutch_Afrikaners:0 "Mobilize Dutch Afrikaners"
   SA_Mobolize_Dutch_Afrikaners_desc:0 "Though small in number the dutch people are willing to give this war their all. While the government is hesitant to send dutch settlers to fight their brothers what choice do they truely have?"
   SA_Seize_Foreign_Manufactories:0 "Seize Foreign Manufactories"
   SA_Seize_Foreign_Manufactories_desc:0 "Foreign factories have made a young introduction to the dominions during the late 20's. Though this will undoubtedly piss off Holland and their corporate puppets the need for weapons is at an all time high."
