--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -1778,19 +1778,19 @@
   PB_FRA_The_State_That_Gives_desc:0 "With Doriots political presence secured and the French economy improving he has now found it necessary to implement the once promised welfare he has spouted to the French public."
 
   PB_FRA_The_End_Of_Time:0 "The End Of Time"
-  PB_FRA_The_End_Of_Time_desc:0 "With hostile troops slowly advancing into core French territory we must embark on a grand campaign, one that will mainly see the defence of France, then-followed by the defeat of her enemies. Whilst resources are scarce and our reserves already mobolized we must have hope that victory is possible, else we may face another embarrassing defeat from the British and Germans, once again.\n\n"We can hear the sounds of war, and all the unpleasantries we had forgot about long ago. Ready your sons, for war is coming home." - Unknown French Officer"
+  PB_FRA_The_End_Of_Time_desc:0 "With hostile troops slowly advancing into core French territory we must embark on a grand campaign, one that will mainly see the defence of France, then-followed by the defeat of her enemies. Whilst resources are scarce and our reserves already mobilized we must have hope that victory is possible, else we may face another embarrassing defeat from the British and Germans, once again.\n\n"We can hear the sounds of war, and all the unpleasantries we had forgot about long ago. Ready your sons, for war is coming home." - Unknown French Officer"
   PB_FRA_Scrap_Campaigns:0 "Scrap Campaigns"
   PB_FRA_Scrap_Campaigns_desc:0 "Our access to steel has been severly limited by enemy occupation. Some local officials and state administrators have implemented major scrap campaigns and voluntery steel donation workshops to help mitigate these shortcomings but we must elevate the issue onto a nation wide level if we are to address it fully. "
   PB_FRA_Mobile_Factories:0 "Mobile Factories"
-  PB_FRA_Mobile_Factories_desc:0 "Our efforts to mobolize our military industry onto wheels has not been in vein. Recent industrial complexes which had just been constructed were immediately swarmed by enemy forces, thus economic experts, or whats left of them, had thankfully had the foresight to modify some wheeled trucks with production based capabilities. Of course these factories on wheels are by no means a permanent replacement to the traditional factory complexes that we had once built, but they will sure as hell do a damn fine job as a temporary replacement."
+  PB_FRA_Mobile_Factories_desc:0 "Our efforts to mobilize our military industry onto wheels has not been in vein. Recent industrial complexes which had just been constructed were immediately swarmed by enemy forces, thus economic experts, or whats left of them, had thankfully had the foresight to modify some wheeled trucks with production based capabilities. Of course these factories on wheels are by no means a permanent replacement to the traditional factory complexes that we had once built, but they will sure as hell do a damn fine job as a temporary replacement."
   PB_FRA_Sacrifices_Must_Be_Made:0 "Sacrifices Must Be Made"
   PB_FRA_Sacrifices_Must_Be_Made_desc:0 "Whilst it may seem counter-productive to convert our remaining civilian industries to weapon production facilities, especially when our populace is in a desperate need for various utensils and other conusmer goods, we must address the dire state of our military; or the lack thereof. We must remember that every gun produced is one which can be fired, and if we're lucky, kill a man."
   PB_FRA_Loot_The_Museums:0 "Loot The Museums"
   PB_FRA_Loot_The_Museums_desc:0 "There are hundreds of museums littered around France and all house functional or semi-functional weapons of war. From Great War rifles to 19th century artillery guns, whilst they may be old, and some barely even functional, they will have to do. Afterall beggers can't be choosers, can they?"  
   PB_FRA_Scorched_Earth_Tactics:0 "Scorched Earth Tactics"
   PB_FRA_Scorched_Earth_Tactics_desc:0 "Everyday the horde kreeps closer and closer to our rump territories, barely held with tape at this point. But there is hope, if one could call it that. Secret legions stationed behind enemy lines have been increasingly ferocious in their efforts to bomb occupied infrastructure and if we could cordinate with the soldiers on where to allocate their restricted reserves of explosive material then we might be able to turn this damn war around."
-  PB_FRA_Mobolize_The_Militias:0 "Mobolize The Militias"
-  PB_FRA_Mobolize_The_Militias_desc:0 "With our army now severly lacking in men fit for service we find it neccesary to mobolize whoever we can in the defense of France. Anyone who can shoot a gun can in some way prevent the enemy from closing in."
+  PB_FRA_Mobolize_The_Militias:0 "Mobilize The Militias"
+  PB_FRA_Mobolize_The_Militias_desc:0 "With our army now severly lacking in men fit for service we find it neccesary to mobilize whoever we can in the defense of France. Anyone who can shoot a gun can in some way prevent the enemy from closing in."
   PB_FRA_Child_Soliders:0 "Child Soldiers"
   PB_FRA_Child_Soliders_desc:0 "Most of our war capable manpower has been depleted and finding young men fit for service is a task near impossible. However, we have an abundance of young children who are ready and eager to take the fight to the enemy."
   PB_FRA_Cutting_Corners:0 "Cutting Corners" 
@@ -2102,8 +2102,8 @@
   FRA_Navy_Defense_tt:0 "Every §YNavy Leader§! Will Gain One Defense Skill"
   FRA_Navy_Planning_tt:0 "Every §YNavy Leader§! Will Gain One Planning Skill"
 
-  FRA_Mobolize_The_Militias_tt:0 "Fifteen §YTempête Populaire§! Divisions Will Be Mobolized Across France"
-  PB_FRA_Foreign_Forces_tt:0 "Three §YTempête Populaire§! Divisions Will Be Mobolized Across France"
+  FRA_Mobolize_The_Militias_tt:0 "Fifteen §YTempête Populaire§! Divisions Will Be Mobilized Across France"
+  PB_FRA_Foreign_Forces_tt:0 "Three §YTempête Populaire§! Divisions Will Be Mobilized Across France"
 
   PB_FRA_Factionalism_Clamp_tt:0 "The Maximum Value For Factionalism Will be §PLowered§!"
 
