--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -420,7 +420,7 @@
   Russian_Politics.28.c:0 "Vvedensky appoints Vernadsky as head of the Council"
 
   Russian_Politics.29.t:0 "The First National Election"
-  Russian_Politics.29.d:0 "The First Election in Russian History is now occuring and the mood in the streets is exiting. Party-Supporters try to speak bypassers to convince them voting in their party. Speeches across towns and cities are being made everyday where the future statesmen advocate for their political agendas.\n\nWhile polling is hard and generally unpredictable for the first election the newspapers generally expect a tight race between three parties. The Kadets "
+  Russian_Politics.29.d:0 "The First Election in Russian History is now occuring and the mood in the streets is exiting. Party-Supporters try to speak bypassers to convince them voting in their party. Speeches across towns and cities are being made everyday where the future statesmen advocate for their political agendas.\n\nWhile polling is hard and generally unpredictable for the first election the newspapers generally expect a tight race between three parties. The Kadets who have close ties to the Emperor and the Court due to their lasting partnership in the last decade. The Zemtsvoites who desire large land reforms and social reforms in the Empire. And lastly the Nationalists a new party, compromised largely of disappointed veterans over the Great War and desire to end several threats to the Russian Lands."
   Russian_Politics.29.a:0 "The Kadets win Northern Russia!"
   Russian_Politics.29.b:0 "The Zemtsvoites take a victory!"
   Russian_Politics.29.c:0 "The Nationalists sweep the polls!"
