--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1335,7 +1335,7 @@
   # Decisions
   ##########################
   PB_RUS_Okhrana:0 "The Second Time of Troubles"
-  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§! and by gathering §Cintel§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
+  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§! and by gathering §Cintel§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%             (Currently capped at [?RUS.RUS_Polish_Resistance_Power_cap]%)\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%      (Currently capped at [?RUS.RUS_Ukraine_Resistance_Power_cap]%)\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%             (Currently capped at [?RUS.RUS_Baltic_Resistance_Power_cap]%)\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%             (Currently capped at [?RUS.RUS_Finnish_Resistance_Power_cap]%)\n\n\n\n\n\n\n\n\n\n\n\n\n"
 
   RUS_Okhrana_Poland_Intel_tt: "Current §CIntel§! on §YPolish Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Poland]§!"
   RUS_Okhrana_Ukraine_Intel_tt: "Current §CIntel§! on §YUkrainian Resistance§! is £RUS_Okhrana_Intel §C[?RUS.RUS_Okhrana_Intel_Ukraine]§!"
@@ -1362,6 +1362,8 @@
   PB_Okhrana_Gather_Intel_Ukraine: "Gather intel on Ukrainian Resistance"
   PB_Okhrana_Gather_Intel_Baltic: "Gather intel on Baltic Resistance"
   PB_Okhrana_Gather_Intel_Finland: "Gather intel on Finnish Resistance"
+
+  PB_RUS_OKH_reduce_resistance_cap_tt: "§YResistance Cap§! will be lowered by §Y10%§! with every §Yfifth§! decision taken (up to 4 times)"
 
  RUS_Okhrana_Intel_Gain_0_tt: "We will gain §RNo Intel§!"
  RUS_Okhrana_Intel_Gain_2_tt: "We will gain £RUS_Okhrana_Intel §C2 Intel§!"
@@ -1523,33 +1525,33 @@
   PB_RUS_Okhrana_Resource_Expense_Medium_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-40 Okhrana Resources§!"
   PB_RUS_Okhrana_Resource_Expense_Large_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-60 Okhrana Resources§!"
 
-  PB_RUS_Increase_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y10%§!"
-  PB_RUS_Increase_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y15%§!"
-  PB_RUS_Increase_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y20%§!"
-  PB_RUS_Decrease_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y10%§!"
-  PB_RUS_Decrease_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y15%§!"
-  PB_RUS_Decrease_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y20%§!"
+  PB_RUS_Increase_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y5%§!"
+  PB_RUS_Increase_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Rincrease§! by §Y15%§!"
+  PB_RUS_Decrease_Polish_Resistance_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y5%§!"
+  PB_RUS_Decrease_Polish_Resistance_Medium_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Polish_Resistance_Large_tt:0 "§YPolish Resistance Power§! will §Gdecrease§! by §Y15%§!"
 
-  PB_RUS_Increase_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y10%§!"
-  PB_RUS_Increase_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y15%§!"
-  PB_RUS_Increase_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y20%§!"
-  PB_RUS_Decrease_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y10%§!"
-  PB_RUS_Decrease_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y15%§!"
-  PB_RUS_Decrease_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y20%§!"
+  PB_RUS_Increase_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y5%§!"
+  PB_RUS_Increase_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Rincrease§! by §Y15%§!"
+  PB_RUS_Decrease_Baltic_Resistance_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y5%§!"
+  PB_RUS_Decrease_Baltic_Resistance_Medium_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Baltic_Resistance_Large_tt:0 "§YBaltic Resistance Power§! will §Gdecrease§! by §Y15%§!"
 
-  PB_RUS_Increase_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y10%§!"
-  PB_RUS_Increase_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y15%§!"
-  PB_RUS_Increase_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y20%§!"
-  PB_RUS_Decrease_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y10%§!"
-  PB_RUS_Decrease_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y15%§!"
-  PB_RUS_Decrease_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y20%§!"
+  PB_RUS_Increase_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y5%§!"
+  PB_RUS_Increase_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Rincrease§! by §Y15%§!"
+  PB_RUS_Decrease_Ukrainian_Resistance_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y5%§!"
+  PB_RUS_Decrease_Ukrainian_Resistance_Medium_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Ukrainian_Resistance_Large_tt:0 "§YUkrainian Resistance Power§! will §Gdecrease§! by §Y15%§!"
 
-  PB_RUS_Increase_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y10%§!"
-  PB_RUS_Increase_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y15%§!"
-  PB_RUS_Increase_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y20%§!"
-  PB_RUS_Decrease_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y10%§!"
-  PB_RUS_Decrease_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y15%§!"
-  PB_RUS_Decrease_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y20%§!"
+  PB_RUS_Increase_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y5%§!"
+  PB_RUS_Increase_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y10%§!"
+  PB_RUS_Increase_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Rincrease§! by §Y15%§!"
+  PB_RUS_Decrease_Finnish_Resistance_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y5%§!"
+  PB_RUS_Decrease_Finnish_Resistance_Medium_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y10%§!"
+  PB_RUS_Decrease_Finnish_Resistance_Large_tt:0 "§YFinnish Resistance Power§! will §Gdecrease§! by §Y15%§!"
 
   PB_RUS_Domestic_Politics:0 "Russian Domestic Politics"
 
@@ -2032,6 +2034,10 @@
 
   PB_RUS_Perfect_Democracy_tt:0 "The §GCommonality Consensus Project§! will begin implementation, opening up additional £decision_icon_small decisions."
   PB_RUS_National_Panopticon_tt:0 "The §0National Panopticon Project§! will begin implementation, opening up additional £decision_icon_small decisions."
+
+  PB_RUS_Address_the_Duma_available_tt: "Available after §Y1933 Elections§!"
+  PB_RUS_Not_So_Invisible_available_tt: "Available after reaching §Y50 popularity§! as §GNeo Imperialists§! and letting §GMoscow Circle succeed§! in the §Ycoup§!"
+  PB_RUS_God_Returns_to_Save_Russia_tt: "Available after reaching §Y50 popularity§! as §GNeo Imperialists§! and letting §RMoscow Circle fail§! in the §Ycoup§!"
 
   # regnal names tt
   PB_RUS_Xenia_Regnal_Name_tt: "§Y[RUS_Xenia_Alexandrovna.GetName]§! will adopt the regnal name §YYekaterina III§!"
