more russian and swedish generals, tweaks, bugfixing

--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -67,8 +67,12 @@
   georgian_desc:0 "This General is of Polish descent"
   azeri:0 "Azeri"
   azeri_desc:0 "This General is of Azeri descent"
+  armenian:0 "Armenian"
+  armenian_desc:0 "This General is of Armenian descent"
   finnish:0 "Finnish"
   finnish_desc:0 "This General is of Finnish descent"
+  baltic_german:0 "Baltic German"
+  baltic_german_desc:0 "This General is of Baltic German descent"
   Inexperienced:0 "Inexperienced"
   Inexperienced_desc:0 "This General has not experienced as much combat as their fellows, and while eager to fight, they may not be as effective as more seasoned military staff."
   Siberian_Front_Veteran_But_Better:0 "Veteran of the Siberian War"
