--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -77,7 +77,7 @@
  STATE_76: "North Siebenbürgen"
  STATE_77: "Dobrudja"
  STATE_78: "Bessarabia"
- STATE_79: "Moldova"
+ STATE_79: "Iasi"
  STATE_80: "Bucovina"
  STATE_81: "Oltenia"
  STATE_82: "Banat"
@@ -1025,7 +1025,7 @@
  STATE_1024: "Apulia"
  STATE_1025: "Baden"
  STATE_1026: "Srem"
- STATE_1027: "Herzegovina"
+ STATE_1027: "East Herzegovina"
  STATE_1028: "Banja Luka"
  STATE_1029: "Slavonija"
  STATE_1030: "Rijeka"
@@ -1206,7 +1206,7 @@
  STATE_1205: "Ardeche"
  STATE_1206: "Moselle"
  STATE_1207: "Sedan"
- STATE_1208: "Southern Bessarabia"
+ STATE_1208: "Gagauzia"
  STATE_1209: "Northern Epirus"
  STATE_1210: "Ionian Islands"
  STATE_1211: "Tabasco"
@@ -1226,4 +1226,22 @@
  STATE_1225: "La Pampa"
  STATE_1226: "Nequen"
  STATE_1227: "Aysen"
- STATE_1228: "Coquimbo"
+ STATE_1228: "Aysen"
+ STATE_1229: "Corfu"
+ STATE_1230: "Kithira"
+ STATE_1231: "Debar"
+ STATE_1232: "West Herzegovina"
+ STATE_1233: "Tropolje"
+ STATE_1234: "Krajina"
+ STATE_1235: "Posavina"
+ STATE_1236: "Sumadija"
+ STATE_1237: "Galati"
+ STATE_1238: "Maramures"
+ STATE_1239: "Bacs"
+ STATE_1240: "Central Slovakia"
+ STATE_1241: "Mura"
+ STATE_1242: "Kotor"
+ STATE_1243: "Ragusa"
+ STATE_1244: "Uskudar"
+ STATE_1245: "Mount Athos"
+ STATE_1246: "Cordoba"
