balkan rework stuff

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -441,8 +441,8 @@
  HUN_lb_DEF:0 "The Republic of Hungary"
  HUN_ss:0 "Hungary"
  HUN_ss_DEF:0 "The Republic of Hungary"
- HUN_jc:0 "Hungarian Common Republic"
- HUN_jc_DEF:0 "The Hungarian Common Republic"
+ HUN_jc:0 "Fraternal Vanguard of Hungary"
+ HUN_jc_DEF:0 "The Fraternal Vanguard of Hungary"
  HUN_ni_ADJ:0 "Hungarian"
  HUN_rc_ADJ:0 "Hungarian"
  HUN_lb_ADJ:0 "Hungarian"
@@ -454,14 +454,14 @@
 
  SER_ni:0 "Kingdom of Greater Serbia"
  SER_ni_DEF:0 "The Kingdom of Greater Serbia"
- SER_ds:0 "Kingdom of Greater Serbia"
- SER_ds_DEF:0 "The Kingdom of Greater Serbia"
+ SER_ds:0 "Kingdom of Serbian and Montenegro"
+ SER_ds_DEF:0 "The Kingdom of Serbian and Montenegro"
  SER_rc:0 "Kingdom of Greater Serbia"
  SER_rc_DEF:0 "The Kingdom of Greater Serbia"
  SER_an:0 "Kingdom of Greater Serbia "
  SER_an_DEF:0 "The Kingdom of Greater Serbia"
- SER_cn:0 "Kingdom of Greater Serbia"
- SER_cn_DEF:0 "The Kingdom of Greater Serbia"
+ SER_cn:0 "Kingdom of Serbian & Montenegro"
+ SER_cn_DEF:0 "The Kingdom of Serbian and Montenegro"
  SER_lb:0 "Kingdom of Greater Serbia"
  SER_lb_DEF:0 "The Kingdom of Greater Serbia"
  SER_ss:0 "Kingdom of Greater Serbia"
@@ -579,8 +579,8 @@
 
  SLO_ni:0 "Slovakia"
  SLO_ni_DEF:0 "The Republic of Slovakia"
- SLO_ds:0 "Slovakia"
- SLO_ds_DEF:0 "The Republic of Slovakia"
+ SLO_ds:0 "Hungarian White Army in Slovakia"
+ SLO_ds_DEF:0 "the Hungarian White Army in Slovakia"
  SLO_rc:0 "Slovakia"
  SLO_rc_DEF:0 "The Republic of Slovakia"
  SLO_an:0 "Slovakia "
@@ -711,8 +711,8 @@
  ALB_rc_DEF:0 "The Kingdom of Albania"
  ALB_an:0 "Kingdom of Albania "
  ALB_an_DEF:0 "The Kingdom of Albania"
- ALB_cn:0 "Kingdom of Albania"
- ALB_cn_DEF:0 "The Kingdom of Albania"
+ ALB_cn:0 "Alawiyya Kingdom of Albania"
+ ALB_cn_DEF:0 "The Alawiyya Kingdom of Albania"
  ALB_lb:0 "Kingdom of Albania"
  ALB_lb_DEF:0 "The Kingdom of Albania"
  ALB_ss:0 "Kingdom of Albania"
@@ -8746,13 +8746,9 @@ SAN_an_ADJ:0 "Indian"
  DER_cn_ADJ:0 "Trekker"
  DER_an_ADJ:0 "Trekker"
 
- MOL:0 "Moldova"
- MOL_DEF:0 "the Republic of Moldova"
- MOL_ds:0 "Kingdom of Moldova"
- MOL_ds_DEF:0 "the Kingdom of Moldova"
- MOL_rc:0 "Kingdom of Moldova"
- MOL_rc_DEF:0 "the Kingdom of Moldova"
- MOL_ADJ:0 "Moldovan"
+ MOL:0 "Resurrectionary State of Moldavia"
+ MOL_DEF:0 "the Resurrectionary State of Moldavia"
+ MOL_ADJ:0 "Moldavian"
  
  LMB:0 "Lombardy"
  LMB_DEF:0 "Lombardy"
@@ -9232,6 +9228,22 @@ MLT_an_ADJ:0 "Maltese"
  TFP_ds_ADJ:0 "Martian"
  TFP_cn_ADJ:0 "Martian"
  TFP_an_ADJ:0 "Martian"
+
+ DAL:0 "Republic of Ragusa"
+ DAL_DEF:0 "the Republic of Ragusa"
+ DAL_ADJ:0 "Ragusan"
+
+ SLA:0 "Kingdom of Slavonia"
+ SLA_DEF:0 "the Kingdom of Slavonia"
+ SLA_ADJ:0 "Slavonian"
+
+ ILL:0 "Concordian Republic of Illyria"
+ ILL_DEF:0 "the Concordian Republic of Illyria"
+ ILL_ADJ:0 "Illyrian"
+
+ ION:0 "United States of the Ionian Islands"
+ ION_DEF:0 "the United States of the Ionian Islands"
+ ION_ADJ:0 "Ionian"
 
 ###################################
 # TEMPLATE
