Bleeding South Decisions Fix

--- a/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
@@ -2469,12 +2469,12 @@ PB_AME_The_Bleeding_South_desc:0 "\n\n\n\n\n\nRacial tensions in the Southern st
 AME_Southern_Rebellion:0 "Southern Rebellion"
 AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
 AME_Civil_Unrest:0 "Civil Unrest"
-AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+AME_Civil_Unrest_desc:0 "It is only time until we see the South proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
 
 AME_Southern_Rebellion_Lang:0 "Southern Rebellion"
 AME_Southern_Rebellion_Lang_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
 AME_Civil_Unrest_Lang:0 "Civil Unrest"
-AME_Civil_Unrest_Lang_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+AME_Civil_Unrest_Lang_desc:0 "It is only time until we see the South proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
 
 AME_Bribe_Dixie_Governors_Lang:0 "Bribing Old Dixie Governors"
 AME_Bribe_Dixie_Governors_Lang_desc:0 "He says he'll play ball if we pay for some, I know this sounds odd, some surgeries...that he wants, Augmentaion surgeries. He says he'll sit on everything. - How much? - There are several procedures and altogether they cost ...  - Pay it. - Yes, sir. Okay. Yeah."
