--- a/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
@@ -630,7 +630,7 @@
   PB_PRS_Anti_Jacobin_Crusade:0 "Anti-Jacobin Crusade"
   PB_PRS_Anti_Jacobin_Crusade_desc:0 "Jacobin is an ideological disease that has been permitted to thrive for far too long. We must stamp out this extreme leftist curse wherever it may rear its ugly head, once and for all.  "
   PB_PRS_Promote_Europeanism:0 "Promote Europeanism"
-  PB_PRS_Promote_Europeanism_desc:0 "Ever snice the collapse of the great empires of the Romans and Charlemagne the peoples of Europe have fought each in war after war. From fighting over money and land to their culture and for royal titles. Oh, what nonsense! Disunited we lost land to the Arabs, Mongols, Turks, and a dozen other invaders. Now we stand divided by the vile forces of Jacobinism and other radical ideologies looking to destroy Europe as we know it, only united shall Europe overcome this era of Radicalism and reassert its power over the barbaric peoples like we did in the age of Trajan."
+  PB_PRS_Promote_Europeanism_desc:0 "Ever since the collapse of the great empires of the Romans and Charlemagne the peoples of Europe have fought each in war after war. From fighting over money and land to their culture and for royal titles. Oh, what nonsense! Disunited we lost land to the Arabs, Mongols, Turks, and a dozen other invaders. Now we stand divided by the vile forces of Jacobinism and other radical ideologies looking to destroy Europe as we know it, only united shall Europe overcome this era of Radicalism and reassert its power over the barbaric peoples like we did in the age of Trajan."
   PB_PRS_Demand_Authority_Over_Berlin:0 "Demand Authority Over Berlin"
   PB_PRS_Demand_Authority_Over_Berlin_desc:0 "The time has come for us to step on the toes of Europe’s raging bear, we have kissed the feet of Moscow for too long and if they think that we are willing to send our brave young boys to die and expect nothing in return then they are either too stupid or too drunk; likely both.\n\nIt has been our destiny to unite with the old Prussian regions of Brandenburg since Bouhler’s coming of power, and nothing will prevent us from pursing such a goal."
   PB_PRS_Our_Greatest_Hour:0 "Our Greatest Hour"
@@ -648,7 +648,7 @@
   PB_Placate_The_War_Profiteers:0 "Placate The War Profiteers"
   PB_Placate_The_War_Profiteers_desc:0 "The importance of war profiteers during wartime is a complex and controversial aspect of armed conflicts. While war profiteering can be seen as ethically questionable and exploitative, it cannot be denied that these entities often play a significant role in sustaining a nation's war effort. If we wish to meet the industrial output of the world's greatest powers then we are going to have to sideline some of our core beliefs."
   PB_PRS_The_Men_In_Black:0 "The Men In Black"
-  PB_PRS_The_Men_In_Black_desc:0 "Neo-Imperialism is more than just an ideology promoted by our nation and its peoples. It is a way of life, one that can forge a new destiny for humanity amongst its violent struggle, we must only seize on this grand opportunity. "
+  PB_PRS_The_Men_In_Black_desc:0 "Neo-Imperialism is more than just an ideology promoted by our nation and its peoples. It is a way of life, one that can forge a new destiny for humanity amongst its violent struggle, we must seize this grand opportunity. "
   PB_PRS_Establish_Council_Presence_NA:0 "Establish Council Presence: §YNorth America§!"
   PB_PRS_Establish_Council_Presence_NA_desc:0 "We must open new networks within North America!"
   PB_PRS_Establish_Council_Presence_SA:0 "Establish Council Presence: §YSouth America§!"
