--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -255,9 +255,24 @@
 
   ImpCiv_Crisis.22.t:0 "Spirit of ‘76" 
   ImpCiv_Crisis.22.d:0 "Transcribed from the American Prime Minister’s declaration of war against the United Kingdom...\n\nThe time has come. For too long, the British tyrants have held us under their jackboot, seen us as but puppets to their whims, but no longer. After 300 years of languishing under their control, 300 years of being kept from our rightful place in the sun, the time has come to break free. My fellow Americans, we stand at the precipice of a new era, one of freedom from our British overlords along  with our brothers in this wretched empire who seek their own liberty alongside us. As Washington and fellows once said, We hold these truths to be self-evident that all men are created equal, endowed with unalienable rights by their creator, so let us fight for those rights. Let us fight to the bitter end and should we succeed, let us go west and claim our nation’s birthright! God bless America. God Bless Freedom! "
-
   ImpCiv_Crisis.22.a:0 "The call of Freedom is answered at last."
   ImpCiv_Crisis.22.b:0 "Those damn traitors!"
+
+  ImpCiv_Crisis.23.t:0 "American Spies blow up Railway Hub in Plymouth" 
+  ImpCiv_Crisis.23.d:0 "It was a dark rainy day in Plymouth. Another regular day in this Great War against the far distand America. Supplies were reguarly being shipped out of the Harbor towards the battlefronts in the Americas and beyond. Those goods arrive mostly by train and get organized at the overflowing supply depot.\n\nHowever suddenly the regular day was over. A shooting was reported near the depot. Militias and policeman began arriving but it was already too late.\n\nAn entire train filled with artillery shells blew up in the depot.\n\nThe explosion was massive. Houses across the city all bear marks of damage. The shockwave would even be felt near Portsmouth. It took 20 Hours until the fire were extinguished.\n\nThe depot is almost entirely gone. The damage is devastating with several critically needed supplies lost and dozens of men being consumed by the flames. The train was perfectly placed too cause as much damage as possible. This was sabotage that was clear.\n\nAnd it is now clear how orchestrated this attack. New the small town of of Newquay the Militias detained 2 suspisicious people trying to flee with a motor boat. After extensive interrogation the men revealed to be American Spies tasked with this attack.\n\nLondon is already demanding that the High Command commence a counter operation against America for this."
+  ImpCiv_Crisis.23.a:0 "They will pay for this"
+
+  ImpCiv_Crisis.24.t:0 "Sabotage Operation at Plymouth was a Success" 
+  ImpCiv_Crisis.24.d:0 "Reports have slowly been arriving from England. The Operation to sabotage specific Port and Fuel Facilities has been a success. While the Operation was forced to be reduced in scale we the operators on the ground were still able to archieve the maximum outcome. The supply depot in Plymouth has been blown up destroying tons of army equipment and devastating infrastructure and logistical services. This will surely be a good temporary hit to British supplies."
+  ImpCiv_Crisis.24.a:0 "We bite hard"
+
+  ImpCiv_Crisis.25.t:0 "Effect Event - Supposed to be Hidden" 
+  ImpCiv_Crisis.25.d:0 "This Event is to Execute the Ship Damage Effect for Operation AI - If you are seeing this please report it as a bug to the Developers. That Event is supposed to stay hidden."
+  ImpCiv_Crisis.25.a:0 "Ok"
+
+  ImpCiv_Crisis.26.t:0 "AMERICA ATTACKS SCAPA FLOW" 
+  ImpCiv_Crisis.26.d:0 "The Americans managed to hide from our naval intelligence and send a major Carrier task force to the Western Approaches and attacked the naval base in Scapa Flow at the outbreack of the war. There a strong bomber forces managed to carry out a raid against our ships docked there. While the raid only managed to sink one heavy ship, it did succeed in damaging the majority of them which will take some time to repair"
+  ImpCiv_Crisis.26.a:0 "Not our ships..."
 
   ImpCiv_War.1.t:0 "The Imperial Federation"
   ImpCiv_War.1.d:0 "With the defeat of the separatist alliance, Britain once more has triumphed over our North American inferiors. It is clear now that the decentralized model of the Imperial Confederation is simply untenable for the future. We allowed the American upstarts and their traitorous compatriots to grow far too powerful, and we paid the price for this failure in blood.\n\nThe Imperial Confederation will be abolished, and the Empire will be one once again. A single great unity of the Anglo-Saxon peoples, bound by common cause. The Imperial Parliament will become the single united parliament of the Empire, the local provincial governments unified under common law. With the stroke of a pen, the Empire is reborn."
@@ -448,6 +463,8 @@
 
   AME_Culture_Accept_Angloi:0 "§YAnglois§! becomes an §Gaccepted culture§! of the United Commonwealth"
 
+  AME_damaged_bunch_of_ships_sunk_one:0 "§ROne Heavy Capital Ship in Scapa Flow has been sunk. The rest of the task force has been heavily damaged.§!"
+
   # Tension Game
 
   PM_Concessions_for_Tension_UK:0 "Concede Dominance for Peace"
@@ -474,7 +491,7 @@
   PM_Sabotage_English_Port_Facilities_desc:0 "Several American Spies will be stationed to sabotage ammo stores, fuel silos and other critical equipment at the start of a conflict."
   PM_Operation_AI:0 "Operation AI"
   PM_Operation_AI_desc:0 "The British Supremacy at sea is too strong. If we hope to ever win the naval conflict we must strike first with an overwhelming blow."
-  PB_AMERICAN_Carrier_tt:0 "\n§RThe American Carrier Force will launch a suprise attack on Scapa Flow at the outbreak of a conflict§!\n"
+  PB_AMERICAN_Carrier_tt:0 "\n§RThe American Carrier Force will launch a suprise attack on Scapa Flow at the outbreak of a conflict if ships are in the harbor§!\n"
   PB_AMERICAN_Sabotage_tt:0 "\n§RAmerican Spies will sabotage ports and fuel stockpiles at the outbreak of a conflict§!\n\n"
 
   PM_Upgrade_Bermuda:0 "Modernize Bermuda Installations"
