--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -422,14 +422,14 @@
  STATE_421: "Kurdistan"
  STATE_422: "Ceylon"
  STATE_423: "Tamil Nadu"
- STATE_424: "Uttarandhra"
+ STATE_424: "Godavari"
  STATE_425: "Mysore"
  STATE_426: "Orissa"
  STATE_427: "Hyderabad"
  STATE_428: "Gujarat"
  STATE_429: "Deccan"
  STATE_430: "East Bengal"
- STATE_431: "Darjeeling"
+ STATE_431: "Purnia"
  STATE_432: "Assam"
  STATE_433: "Jodhpur"
  STATE_434: "Arunachal"
@@ -439,9 +439,9 @@
  STATE_438: "Awadh"
  STATE_439: "Delhi"
  STATE_440: "Punjab"
- STATE_441: "Kashmir-Jammu & Ladakh"
+ STATE_441: "Kashmir-Jammu-Ladakh"
  STATE_442: "Peshawar"
- STATE_443: "Sind"
+ STATE_443: "East Sind"
  STATE_444: "Baluchistan"
  STATE_445: "Quetta"
  STATE_446: "Nile Delta"
@@ -841,16 +841,16 @@
  STATE_840: "Tonkin"
  STATE_841: "Apurdi"
  STATE_842: "Alaba"
- STATE_843: "Balasore"
+ STATE_843: "Chotanagpur"
  STATE_844: "Bom Bahia"
- STATE_845: "Diu"
+ STATE_845: "Kutch"
  STATE_846: "Goa"
  STATE_847: "Karnataka"
  STATE_848: "Madras"
  STATE_849: "Travancore"
  STATE_850: "Andhra"
  STATE_851: "West Bengal"
- STATE_852: "Sanghli"
+ STATE_852: "Dhule"
  STATE_853: "Sikkim"
  STATE_854: "Surate"
  STATE_855: "Corridor de Dunkerque"
@@ -1102,7 +1102,7 @@
  STATE_1101: "Uttarchal"
  STATE_1102: "Ganga"
  STATE_1103: "Agra"
- STATE_1104: "Mewar"
+ STATE_1104: "Gwalior"
  STATE_1105: "Indore"
  STATE_1106: "Bundelkhand"
  STATE_1107: "Jharkhand"
@@ -1253,3 +1253,12 @@
  STATE_1252: "Magdalena"
  STATE_1253: "Barinas"
  STATE_1254: "Rio Blanco"
+ STATE_1255: "Bahawalpur"
+ STATE_1256: "Chitral"
+ STATE_1257: "Nagpur"
+ STATE_1258: "Bastar"
+ STATE_1259: "Terai"
+ STATE_1260: "West Sind"
+ STATE_1261: "Saharanpur"
+ STATE_1262: "Gondwana"
+ STATE_1263: "Tranquebar"
