--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -805,8 +805,8 @@
 
  PER_ni:0 "Qajar Empire"
  PER_ni_DEF:0 "The Qajar Empire"
- PER_ds:0 "Qajar Empire"
- PER_ds_DEF:0 "The Qajar Empire"
+ PER_ds:0 "United Ummah of Persia"
+ PER_ds_DEF:0 "The United Ummah of Persia"
  PER_rc:0 "Qajar Empire"
  PER_rc_DEF:0 "The Qajar Empire"
  PER_an:0 "Qajar Empire "
@@ -905,14 +905,14 @@
 
  EGY_ni:0 "Kingdom of Egypt"
  EGY_ni_DEF:0 "The Kingdom of Egypt"
- EGY_ds:0 "Kingdom of Egypt"
- EGY_ds_DEF:0 "The Kingdom of Egypt"
+ EGY_ds:0 "Grand Egyptian Sultanate"
+ EGY_ds_DEF:0 "the Grand Egyptian Sultanate"
  EGY_rc:0 "Egyptian Republic"
  EGY_rc_DEF:0 "The Egyptian Republic"
  EGY_an:0 "Kingdom of Egypt "
  EGY_an_DEF:0 "The Kingdom of Egypt"
- EGY_cn:0 "Kingdom of Egypt"
- EGY_cn_DEF:0 "The Kingdom of Egypt"
+ EGY_cn:0 "Grand Egyptian Sultanate"
+ EGY_cn_DEF:0 "the Grand Egyptian Sultanate"
  EGY_lb:0 "Kingdom of Egypt"
  EGY_lb_DEF:0 "The Kingdom of Egypt"
  EGY_ss:0 "Kingdom of Egypt"
@@ -927,6 +927,31 @@
  EGY_ds_ADJ:0 "Egyptian"
  EGY_cn_ADJ:0 "Egyptian"
  EGY_an_ADJ:0 "Egyptian"
+
+ TUR_ni:0 "Turkish State"
+ TUR_ni_DEF:0 "The Pan-Turkish State"
+ TUR_ds:0 "Alloyed Ottoman Federation"
+ TUR_ds_DEF:0 "the Alloyed Ottoman Federation"
+ TUR_rc:0 "Ottoman Empire"
+ TUR_rc_DEF:0 "The Ottoman Empire"
+ TUR_an:0 "Ottoman Empire"
+ TUR_an_DEF:0 "The Ottoman Empire"
+ TUR_cn:0 "Turkey"
+ TUR_cn_DEF:0 "The Republic of Turkey"
+ TUR_lb:0 "Turkey"
+ TUR_lb_DEF:0 "The Republic of Turkey"
+ TUR_ss:0 "Free Government of Turkey"
+ TUR_ss_DEF:0 "The Free Government of Turkey"
+ TUR_jc:0 "Ottoman Empire"
+ TUR_jc_DEF:0 "The Ottoman Empire"
+ TUR_ni_ADJ:0 "Turkish"
+ TUR_rc_ADJ:0 "Turkish"
+ TUR_lb_ADJ:0 "Turkish"
+ TUR_ss_ADJ:0 "Turkish"
+ TUR_jc_ADJ:0 "Turkish"
+ TUR_ds_ADJ:0 "Turkish"
+ TUR_cn_ADJ:0 "Turkish"
+ TUR_an_ADJ:0 "Turkish"
 
  ETH_ni:0 "Abyssinia"
  ETH_ni_DEF:0 "The Abyssinian Empire"
@@ -961,8 +986,8 @@
  YEM_rc_DEF:0 "The Mutawakkilite Kingdom of Yemen"
  YEM_an:0 "Yemen "
  YEM_an_DEF:0 "The Mutawakkilite Kingdom of Yemen"
- YEM_cn:0 "Yemen"
- YEM_cn_DEF:0 "The Mutawakkilite Kingdom of Yemen"
+ YEM_cn:0 "Zaidi Imamate"
+ YEM_cn_DEF:0 "The Zaidi Imamate"
  YEM_lb:0 "Yemen"
  YEM_lb_DEF:0 "The Mutawakkilite Kingdom of Yemen"
  YEM_ss:0 "Yemen"
@@ -2535,8 +2560,8 @@ PRU_an_ADJ:0 "Peruvian"
  OMA_jc_DEF:0 "the Sultanate of Muscat and Oman"
  OMA_an:0 "Oman"
  OMA_an_DEF:0 "Muscat and Oman"
- OMA_ds:0 "Muscat and Oman"
- OMA_ds_DEF:0 "the Sultanate of Muscat and Oman"
+ OMA_ds:0 "Omani Empire"
+ OMA_ds_DEF:0 "the Omani Empire"
  OMA_cn:0 "Muscat and Oman"
  OMA_cn_DEF:0 "the Sultanate of Muscat and Oman"
  OMA_ni_ADJ:0 "Omani"
@@ -3137,8 +3162,8 @@ PRU_an_ADJ:0 "Peruvian"
  HEJ_rc_DEF:0 "the Emirate of Hejaz"
  HEJ_an:0 "Emirate of Hejaz "
  HEJ_an_DEF:0 "the Emirate of Hejaz"
- HEJ_cn:0 "Emirate of Hejaz"
- HEJ_cn_DEF:0 "the Emirate of Hejaz"
+ HEJ_cn:0 "Vilayet of Mecca"
+ HEJ_cn_DEF:0 "the Vilayet of Mecca"
  HEJ_lb:0 "Emirate of Hejaz"
  HEJ_lb_DEF:0 "the Emirate of Hejaz"
  HEJ_ss:0 "Emirate of Hejaz"
@@ -3691,8 +3716,8 @@ SAN_an_ADJ:0 "Indian"
 
  IKW_ni:0 "Grand Arab Caliphate"
  IKW_ni_DEF:0 "The Grand Arab Caliphate"
- IKW_ds:0 "Grand Arab Caliphate"
- IKW_ds_DEF:0 "The Grand Arab Caliphate"
+ IKW_ds:0 "Ikhwan Rebellion"
+ IKW_ds_DEF:0 "The Ikhwan Rebellion"
  IKW_rc:0 "Grand Arab Caliphate"
  IKW_rc_DEF:0 "The Grand Arab Caliphate"
  IKW_an:0 "Grand Arab Caliphate"
@@ -7480,8 +7505,8 @@ SAN_an_ADJ:0 "Indian"
  SAU_rc_DEF:0 "The Kingdom of Arabia"
  SAU_an:0 "Kingdom of Arabia"
  SAU_an_DEF:0 "The Kingdom of Arabia"
- SAU_cn:0 "Kingdom of Arabia"
- SAU_cn_DEF:0 "The Kingdom of Arabia"
+ SAU_cn:0 "Emirate of Riyadh"
+ SAU_cn_DEF:0 "The Emirate of Riyadh"
  SAU_lb:0 "Kingdom of Arabia"
  SAU_lb_DEF:0 "The Kingdom of Arabia"
  SAU_ss:0 "Kingdom of Arabia"
@@ -9191,6 +9216,18 @@ MLT_an_ADJ:0 "Maltese"
  CAY:0 "Free Economic Community"
  CAY_DEF:0 "the Free Economic Community"
  CAY_ADJ:0 "Globalist"
+
+ NAN:0 "Warriors of the New Arab Nation"
+ NAN_DEF:0 "the Warriors of the New Arab Nation"
+ NAN_ADJ:0 "New Arab"
+
+ ADE:0 "Aden Treaty Territory"
+ ADE_DEF:0 "the Aden Treaty Territory"
+ ADE_ADJ:0 "Yemenese"
+
+ SDT:0 "Sandstorm Republic"
+ SDT_DEF:0 "the Sandstorm Republic"
+ SDT_ADJ:0 "Sandstormese"
 
 ###################################
 # TEMPLATE
