--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -313,3 +313,4 @@
  STRATEGICREGION_312:0 "Amundsen Sea"
  STRATEGICREGION_313:0 "Bellingshausen Sea"
  STRATEGICREGION_314:0 "Baffin Sea"
+ STRATEGICREGION_315:0 "El Eglab"
