--- a/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
@@ -1,9 +1,55 @@
 ﻿l_english:
 
   ##########################
-  # MINISTERS
+  # MECHANICS
   ##########################
+  PB_ASK_The_Last_Frontier:0 "The Last Frontier"
+  PB_ASK_The_Last_Frontier_desc:0 "\n\n\n\n\n\nIt is in the far-flung lands of the Alaskan wilderness where many have found their peace. Home to Russian administrators, American industrialists, and British missionaries there are few who are not willing to call this nation home, as isolated and barren as it may be. With Russian colonial spirit at a fever pitch and the wealth of the American continent ripe for exploitation there are those who seek to find their fortune amongst our lands, we should make every effort to welcome these individuals and profit from their expertise.\n\nCultural Communities\n\n[RUS.GetFlag] Slavic ([get_ASK_Slavic_CC]), [AME.GetFlag] American ([get_ASK_American_CC]), [ENG.GetFlag] British ([get_ASK_British_CC]), [FRA.GetFlag] French ([get_ASK_French_CC]), [ITA.GetFlag] Italian ([get_ASK_Italian_CC]), [SPR.GetFlag] Spanish ([get_ASK_Spanish_CC]), [GER.GetFlag] German ([get_ASK_German_CC]), [JAP.GetFlag] Japanese ([get_ASK_Japanese_CC]), [LAK.GetFlag] Native ([get_ASK_Native_CC])\n\nCultural Communities with the (§CIntegrated Status§!) cannot loose their (§GAccepted§!) status by events, focuses, or decisions. Communities that aren't established will first become (§RNot Accpeted§!) when they are established, they can them become (§GAccepted§!), and eventually (§CIntegrated§!).\n\nMinisters, theorists, tech teams, and officers are locked/unlocked depending on whether their community is accepted or not.\n"
 
+  PB_ASK_Slavic_Not_Established:0 "§gNot Established§!"
+  PB_ASK_Slavic_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_Slavic_Accepted:0 "§GAccepted§!"
+  PB_ASK_Slavic_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_American_Not_Established:0 "§gNot Established§!"
+  PB_ASK_American_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_American_Accepted:0 "§GAccepted§!"
+  PB_ASK_American_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_British_Not_Established:0 "§gNot Established§!"
+  PB_ASK_British_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_British_Accepted:0 "§GAccepted§!"
+  PB_ASK_British_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_French_Not_Established:0 "§gNot Established§!"
+  PB_ASK_French_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_French_Accepted:0 "§GAccepted§!"
+  PB_ASK_French_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_Italian_Not_Established:0 "§gNot Established§!"
+  PB_ASK_Italian_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_Italian_Accepted:0 "§GAccepted§!"
+  PB_ASK_Italian_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_Spanish_Not_Established:0 "§gNot Established§!"
+  PB_ASK_Spanish_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_Spanish_Accepted:0 "§GAccepted§!"
+  PB_ASK_Spanish_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_German_Not_Established:0 "§gNot Established§!"
+  PB_ASK_German_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_German_Accepted:0 "§GAccepted§!"
+  PB_ASK_German_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_Japanese_Not_Established:0 "§gNot Established§!"
+  PB_ASK_Japanese_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_Japanese_Accepted:0 "§GAccepted§!"
+  PB_ASK_Japanese_Integrated:0 "§CIntegrated§!"
+
+  PB_ASK_Native_Not_Established:0 "§gNot Established§!"
+  PB_ASK_Native_Not_Accepted:0 "§RNot Accepted§!"
+  PB_ASK_Native_Accepted:0 "§GAccepted§!"
+  PB_ASK_Native_Integrated:0 "§CIntegrated§!"
 
   ##########################
   # FOCUSES
