--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -293,7 +293,7 @@
  STATE_292: "Nejd"
  STATE_293: "North Yemen"
  STATE_294: "Muscat"
- STATE_295: "Portuguese Kongo"
+ STATE_295: "Büttnerstadt"
  STATE_296: "Portuguese Guinea"
  STATE_297: "Gobi"
  STATE_298: "Cabo Mesurado"
@@ -539,9 +539,9 @@
  STATE_538: "Central Kongo"
  STATE_539: "Gabon"
  STATE_540: "South Angola"
- STATE_541: "South West Africa"
- STATE_542: "Bechuanaland"
- STATE_543: "Madagascar"
+ STATE_541: "Namaland"
+ STATE_542: "Tswanaland"
+ STATE_543: "Central Madagascar"
  STATE_544: "Mozambique"
  STATE_545: "Zimbabwe"
  STATE_546: "Tanganyika"
@@ -658,7 +658,7 @@
  STATE_657: "Tikhonkaya"
  STATE_658: "Abu Dhabi"
  STATE_659: "South Yemen"
- STATE_660: "Bangui"
+ STATE_660: "Shari"
  STATE_661: "Tripolitania"
  STATE_662: "Al Wahat"
  STATE_663: "Derna"
@@ -765,7 +765,7 @@
  STATE_764: "West Banat"
  STATE_765: "Qatar"
  STATE_766: "Akkerman"
- STATE_767: "Darfur"
+ STATE_767: "North Darfur"
  STATE_768: "Rwanda"
  STATE_769: "Burundi"
  STATE_770: "Malawi"
@@ -862,7 +862,7 @@
  STATE_861: "Azawad"
  STATE_862: "Biafra"
  STATE_863: "Oyo"
- STATE_864: "Garanganze"
+ STATE_864: "Garanganza"
  STATE_865: "East Kenya"
  STATE_866: "Buganda"
  STATE_867: "Mombasa"
@@ -1313,3 +1313,26 @@
  STATE_1312: "Deir ez-Zor"
  STATE_1313: "Wadai"
  STATE_1314: "Giza"
+ STATE_1315: "Basutoland"
+ STATE_1316: "Zululand"
+ STATE_1317: "Transkei"
+ STATE_1318: "Bechuanaland"
+ STATE_1319: "Kalahari"
+ STATE_1320: "Hereroland"
+ STATE_1321: "Kasanje"
+ STATE_1322: "Luba"
+ STATE_1323: "North Barotseland"
+ STATE_1324: "Matabeleland"
+ STATE_1325: "Lusaka"
+ STATE_1326: "Maputo"
+ STATE_1327: "Delgadokap"
+ STATE_1328: "Beitland"
+ STATE_1329: "Northern Madagascar"
+ STATE_1330: "Southern Madagascar"
+ STATE_1331: "Central Kenya"
+ STATE_1332: "South Darfur"
+ STATE_1333: "Fashoda"
+ STATE_1334: "Jubaland"
+ STATE_1335: "Ubangi"
+ STATE_1336: "Rafai"
+ STATE_1337: "South Kongo"
