--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1324,7 +1324,7 @@
  STATE_1323: "North Barotseland"
  STATE_1324: "Matabeleland"
  STATE_1325: "Lusaka"
- STATE_1326: "Maputo"
+ STATE_1326: "Sofala"
  STATE_1327: "Delgadokap"
  STATE_1328: "Beitland"
  STATE_1329: "Northern Madagascar"
