--- a/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
@@ -1,4 +1,21 @@
 ﻿l_english:
+  ##########################
+  # TOOLTIPS
+  ##########################
+  ASK_CC_Accepted_tt:0 "This minister's cultural community is (§GAccepted§!) or (§CIntegrated§!)."
+
+  ##########################
+  # MINISTERS
+  ##########################
+
+  ASK_PB_William_Egan:0 "William 'Bill' Egan"
+
+
+  ##########################
+  # TRAITS
+  ##########################
+
+  PB_ASK_American_Trait:0 "£personality_intelligent §CAmerican§!"
 
   ##########################
   # MECHANICS
