more new peace deals initial code + buildings tweaking

--- a/localisation/english/province_names_l_english.yml
+++ b/localisation/english/province_names_l_english.yml
@@ -13,6 +13,10 @@
  australia_adj:0 "Oceanian"
  middle_east:0 "Middle East"
  middle_east_adj:0 "Middle Eastern"
+ central_america:0 "Central America"
+ central_america_adj:0 "Central American"
+ india:0 "India"
+ india_adj:0 "Indian"
  antarctica:0 "Antarctica"
  antarctica_adj:0 "Antarctic"
  neighbor:0 "Neighbor"
